--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lambdatt-qui/iam",
+  "name": "@lambdatt/qui-toolcase",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.js",
@@ -7,18 +7,22 @@
   "files": [
     "src"
   ],
+  "dependencies": {
+    "chart.js": "^2.9.4",
+    "html2pdf.js": "^0.10.3",
+    "signature_pad": "^5.0.10"
+  },
   "peerDependencies": {
     "quasar": "^2.5.0",
     "vue": "^3.2.0",
-    "@lambdatt-qui/toolcase": "^1.0.0"
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "@lambdatt-qui/toolcase": "^1.0.0"
+    "rollup-plugin-vue": "^6.0.0"
   },
   "scripts": {
     "generate": "node scripts/generate-registrations.js",
